--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "postcss": "^8.4.31",
         "tailwindcss": "^3.4.1",
         "vite": "^5.0",
-        "vue": "^3.4.0"
+        "vue": "^3.4.0",
+        "eslint": "^8.23.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-vue": "^9.4.0"
     }
 }
